[package]
name = "near-sample-indexer"
version = "0.1.0"
authors = ["Shankar <mshankarrao1970@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# actix = "=0.11.0-beta.2"
# openssl-probe = { version = "0.1.2" }
# tokio = { version = "1.1", features = ["sync"] }
# serde = { version = "1", features = [ "derive" ] }
# serde_json = "1.0.55"


actix = "=0.11.0-beta.2"
clap = "3.0.0-beta.1"
openssl-probe = "0.1.2"
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
anyhow = "1.0"


near-indexer = { git = "https://github.com/near/nearcore"}